# carry

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml
.github/workflows/: deploy.yml  task-definition.json
carry/: config.py  context.py  run.py
carry/core/: bl.py  entities.py  repositories.py  templates.py
carry/db/: __init__.py  core.py  tables.py
carry/telegram_bot/: __main__.py  commands.py  factories.py  logging.py
carry/templates/telegram/: help.jinja2
carry/templates/telegram/decrease_bonuses/: admin.jinja2  user.jinja2
carry/templates/telegram/increase_bonuses/: admin.jinja2  user.jinja2
